# Paint3D

./: pyproject.toml
controlnet/: diffusers_cnet_img2img.py  diffusers_cnet_inpaint.py  diffusers_cnet_txt2img.py
controlnet/config/: UV_based_inpaint_template.yaml  UV_gen_template.yaml  depth_based_inpaint_template.yaml
