[tool.poetry]
name = "paint3d"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python="^3.10"
numpy="1.23.1"
albumentations="1.3.0"
opencv-python="4.6.0.66"
imageio="2.9.0"
imageio-ffmpeg="0.4.2"
pytorch-lightning="1.4.2"
omegaconf="2.1.1"
test-tube=">=0.7.5"
streamlit="1.12.1"
einops="0.3.0"
transformers="4.27.1"
webdataset="0.2.5"
kornia="0.6"
open_clip_torch="2.0.2"
invisible-watermark=">=0.1.5"
streamlit-drawable-canvas="0.8.0"
torchmetrics="0.6.0"
diffusers="0.20.0"
accelerate="0.29.2"
loguru="0.7.2"
trimesh="3.20.2"
xatlas="0.0.7"
torch = "2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
